# FOEL-AttestNotater

./: AttestSkabelon.docx  pyproject.toml
robot_framework/: case_handler.py  config.py  document_handler.py  file_handler.py  helper_functions.py  journalize_process.py  process.py  test_main.py
