[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_framework"
version = "0.0.1"
authors = [
  { name="ITK Development", email="itk-rpa@mkb.aarhus.dk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "OpenOrchestrator == 2.*",
    "Pillow == 10.*",
    "SQLAlchemy == 2.*",
    "pandas == 2.*",
    "python-docx == 1.*",
    "mbu_dev_shared_components == 4.*",
    "requests == 2.*",
]

[project.optional-dependencies]
dev = [
  "pylint",
  "flake8"
]
